# mcp-tool

./: .env.example  .gitignore  btql_queries.py  pyproject.toml  server.py
prompts/: prompts.py
